# django-for-beginner

./: django-for-beginner.code-workspace
Chapter 3/: .gitignore  Makefile  package-lock.json  pyproject.toml
Chapter 3/django_project/: settings.py
Chapter 3/pages/: urls.py  views.py
Chapter 3/templates/: base.html
Chapter 4/: .prettierignore  Dockerfile  Makefile  fly.toml
Chapter 4/django_project/: urls.py
Chapter 4/pages/: tests.py
Chapter 5/: .dockerignore  .gitignore  pyproject.toml
Chapter 5/django_project/: settings.py
Chapter 5/posts/migrations/: 0001_initial.py
Chapter 5/templates/: base.html  home.html
ch-10-custom-user-model/: .env  Makefile  db.sqlite3  pyproject.toml
ch-10-custom-user-model/accounts/: forms.py
ch-10-custom-user-model/blog/: tests.py
ch-10-custom-user-model/django_project/: settings.py
ch-10-custom-user-model/templates/: base.html  post_delete.html  post_new.html
ch-11-user-authentication/: db.sqlite3  package-lock.json  pyproject.toml
ch-11-user-authentication/accounts/: tests.py
ch-11-user-authentication/django_project/: urls.py
ch-12-themepack/: pyproject.toml  tailwind.config.js
ch-12-themepack/django_project/: settings.py
ch-12-themepack/templates/: _base.html  home.html
ch-13-password-change-and-reset/: pyproject.toml
ch-13-password-change-and-reset/django_project/: settings.py
ch-14-newspaper-app/: pyproject.toml
ch-14-newspaper-app/articles/: models.py
ch-14-newspaper-app/django_project/: settings.py
ch-14-newspaper-app/templates/: article_create.html
ch-15-permissions-and-authorization/: pyproject.toml
ch-15-permissions-and-authorization/articles/: admin.py  urls.py  views.py
ch-15-permissions-and-authorization/django_project/: urls.py
ch-15-permissions-and-authorization/templates/: article_detail.html
ch-16-comments/: pyproject.toml
ch-17-newspaper-app-deployment/: Dockerfile  Makefile  fly.toml  pyproject.toml
ch-3-pages-app/: .gitignore  Makefile  package.json
ch-5-message-board-deployment/: Dockerfile  fly.toml
ch-6-blog-app/: pyproject.toml
ch-6-blog-app/blog/: urls.py
ch-6-blog-app/django_project/: settings.py
ch-6-blog-app/templates/: base.html  post_detail.html
ch-7-forms/: package-lock.json  pyproject.toml
ch-8-user-accounts/: .prettierignore  pyproject.toml
ch-9-blog-deployment/: Dockerfile  fly.toml  pyproject.toml
ch-9-blog-deployment/django_project/: settings.py
ch-9-blog-deployment/static/src/: output.css
ch-9-blog-deployment/templates/: home.html
(+50 files in other folders)
