[tool.poetry]
name = "ch-6-blog-app"
version = "0.1.0"
description = ""
authors = ["exkuretrol <33695301+exkuretrol@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.1"
gunicorn = "^21.2.0"
environs = "^10.3.0"
psycopg = "^3.1.17"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
